<resources>
    <string name="app_name">开屏跳过</string>
    <string name="title_home">状态</string>
    <string name="title_settings">设置</string>
    <string name="title_about">关于</string>
    <string name="status_title">服务状态</string>
    <string name="text_instructions">\"开屏跳过\"基于安卓系统的无障碍服务来实现跳过自动广告功能，开源不联网，绝对安全！为保证程序能正常工作，请检查以下设置：</string>
    <string name="text_accessibility_permission">1. 在\"无障碍\"设置里，打开\"开屏跳过 - 无障碍服务\"。</string>
    <string name="text_power_permission">2. 在\"电池优化\"设置里，设置\"开屏跳过\"为\"不优化\"。</string>
    <string name="text_rom_battery">3. 在电池管理里，设置\"开屏跳过\"为\"允许后台耗电\"。设置方法因品牌不同有所差异，比如VIVO系统为：\"设置\" -> \"电池\" -> \"后台耗电管理\"。</string>
    <string name="text_task_manager">4. 在\"任务管理\"里，锁定\"开屏跳过\"。</string>
    <string name="text_status_help">更多信息，请访问网址:</string>
    <string name="text_status_weblink">https://touchhelper.zfdang.com/enable</string>

    <string name="button_setting">设置</string>
    <string name="touch_helper_service_label">开屏跳过-无障碍服务</string>
    <string name="touch_helper_service_description">\"开屏跳过\"是基于安卓系统的无障碍服务来实现自动跳过广告功能的，为了保证程序能正常工作，打开此服务。\n\n本程序为开源程序，不需要网络权限，不会收集或上传任何个人信息，请放心使用！</string>
    <string name="about_app_introduction">
        \"开屏跳过\"可以帮助用户自动跳过一些应用的开屏广告，基于Android的无障碍服务实现。
        \n\n程序可以使用三种方法跳过开屏广告：
        \n\n1. 关键字。在应用中查找含有关键字的按钮，如果发现了对应的按钮，自动帮用户点击从而跳过广告；
        \n2. 应用里的指定控件。当应用工作时，自动查找对应的控件，如果找到则自动点击；
        \n3. 应用里的指定位置。当应用工作时，自动点击对应的区域。
        \n\n上述三种方法可以在\"设置\"里做具体设置。
        \n\n详细信息，请访问网站:
    </string>

    <string name="about_weblink">https://touchhelper.zfdang.com/</string>
    <string name="about_privacy_policy">隐私政策：\nhttps://touchhelper.zfdang.com/privacy.html</string>
    <string name="about_copyright">Copyright © 2022 Zhengfa Dang</string>

    <string name="app_version">版本: %s (%d)</string>
    <string name="accessibility_disclosure_title">开启无障碍服务前请了解</string>
    <string name="accessibility_disclosure_message">\"开屏跳过\"通过安卓无障碍服务读取当前屏幕上的界面内容（控件文字、描述和位置），用于识别并自动点击开屏广告的\"跳过\"按钮。\n\n· 自动识别时，这些内容只在本机内存中即时比对，不保存。\n· 当您使用\"添加程序的跳过方法\"时，您所选控件的文字、描述和坐标会作为规则保存在本机的应用数据中，可在设置中查看或删除。\n· 当您使用\"复制窗口控件\"时，当前窗口的控件信息会按您的操作复制到系统剪贴板。\n\n本程序不申请网络权限，不会收集或上传任何数据。同意后即可开启无障碍服务；未同意前服务不会读取任何界面内容。</string>
    <string name="accessibility_disclosure_agree">同意并前往设置</string>
    <string name="accessibility_disclosure_agree_only">同意</string>
    <string name="accessibility_disclosure_reminder">开屏跳过：请打开应用并确认无障碍服务说明后，跳过功能才会开始工作</string>
    <string name="accessibility_disclosure_cancel">取消</string>
</resources>
